--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -18,6 +18,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Golangci lint
+        uses: golangci/golangci-lint-action@v2
+        with:
+          version: v1.45.2
+
       - name: Markdown lint
         uses: docker://avtodev/markdown-lint:v1
         with:
