feat: init dfbench framework
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -18,6 +18,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Golangci lint
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: v1.54
+          args: --verbose
+          working-directory: benchmark
+
       - name: Markdown lint
         uses: docker://avtodev/markdown-lint:v1
         with:
