feat: init dfbench framework (#68)
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -19,9 +19,11 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Golangci lint
-        uses: golangci/golangci-lint-action@v2
+        uses: golangci/golangci-lint-action@v6
         with:
-          version: v1.45.2
+          version: v1.54
+          args: --verbose
+          working-directory: benchmark
 
       - name: Markdown lint
         uses: docker://avtodev/markdown-lint:v1
